--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,9 +50,7 @@
 .radio,.checkbox{
     padding: 6px 10px;
 }
-.border{
-    border-radius: 12px;
-}
+
 .options{
     position: relative;
     padding-left: 25px;
@@ -346,8 +344,8 @@ img{
 }
 
 .avatar {
-    max-height: 55px; /* Adjust the maximum height of the image */
-    max-width: 55px; /* Adjust the maximum width of the image */
+    max-height: 75px; /* Adjust the maximum height of the image */
+    max-width: 75px; /* Adjust the maximum width of the image */
     object-fit: cover; /* Maintain aspect ratio while covering the space */
     margin-right: 5px;
 }
@@ -365,7 +363,7 @@ img{
 .h7-style{
     font-size: 0.8rem; /* Adjust the size as needed */
     font-weight: 500; /* Adjust the weight as needed */
-    margin-top: 10px;
+    margin-top: 2px;
     /* Add any other styles you need */
 }
 
@@ -385,7 +383,7 @@ img{
     max-height: 25px; /* Adjust the maximum height of the image */
     max-width: 25px; /* Adjust the maximum width of the image */
     object-fit: cover; /* Maintain aspect ratio while covering the space */
-    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .border_pic{
@@ -422,4 +420,18 @@ img{
 .tinder--buttons button img {
     width: 100%; /* Make the image fill the button */
     height: 100%; /* Make the image fill the button */
+}
+
+.profile-head {
+    transform: translateY(5rem)
+}
+
+.cover {
+    background-image: url('{% static "images/card_bg/vivid-blurred-colorful-wallpaper-background.jpg" %}');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.card-body-text{
+    padding-left: 10px;
 }
