Important but minor global style change

--- a/apps/chat/templates/chats/room.html
+++ b/apps/chat/templates/chats/room.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %} 
+{% load static %}
+
+{% block stylesheet %}
+{{block.super}}
+<link rel="stylesheet" type="text/css" href="{% static 'uikit/styles/uikit.css' %}" />
+{% endblock stylesheet %}
+
+
 
 {% block content %}
 <main class="messagePage my-xl">
