--- a/apps/chat/templates/chats/inbox.html
+++ b/apps/chat/templates/chats/inbox.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 {% load custom_filters %}
+
+{% block stylesheet %}
+{{block.super}}
+<link rel="stylesheet" type="text/css" href="{% static 'uikit/styles/uikit.css' %}" />
+{% endblock stylesheet %}
+
+
 {% block content %}
   
   <main class="inbox my-xl">
