--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -11,7 +11,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
       integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous"/>
 
-
 {% endblock stylesheet %}
 
 {% block content %}
@@ -22,16 +21,12 @@
     </div>
     <div class="d-sm-flex align-items-sm-center pt-2 clear">
         <div class="text-muted filter-label">Applied Filters:</div>
-        <div class="green-label font-weight-bold p-0 px-1 mx-sm-1 mx-0 my-sm-0 my-2">Selected Filtre <span
+        <div class="green-label font-weight-bold p-0 px-1 mx-sm-1 mx-0 my-sm-0 my-2">Selected Filter <span
                 class=" px-1 close">&times;</span></div>
-        <div class="green-label font-weight-bold p-0 px-1 mx-sm-1 mx-0">Selected Filtre <span class=" px-1 close">&times;</span>
+        <div class="green-label font-weight-bold p-0 px-1 mx-sm-1 mx-0">Selected Filter <span class=" px-1 close">&times;</span>
         </div>
     </div>
-    <div class="filters">
-        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#mobile-filter"
-                aria-expanded="true" aria-controls="mobile-filter">Filter<span class="px-1 fas fa-filter"></span>
-        </button>
-    </div>
+
     {% comment %}
     <div id="mobile-filter"> <!-- Mobile section-->
         <div class="py-3"> MOBILE VERSION???
@@ -78,71 +73,130 @@
         </div>
     </div>
     {% endcomment %}
+
+
+
+
     <div class="content py-md-0 py-3"> <!-- Web section-->
         <section id="sidebar">
             <div class="py-3">
-                <h5 class="font-weight-bold">Preferences</h5>
-                <form class="user-preferences">
-                    <form class="bs-multi-range my-2 pb-2">
-                        <label for="parent-min-age-range" class="form-label">Parent's minimum age</label>
-                        <input id="parent-age" class="multi-range" type="range" min="18" max="70">
-                    </form>
+                <h5 class="font-weight-bold">Filter by</h5>
+                <h6 class="font-weight-bold">Age</h6>
 
-                    <form class="bs-multi-range my-2 pb-2">
-                        <label for="parent-max-age-range" class="form-label">Parent's maximum age</label>
-                        <input id="parent-age" class="multi-range" type="range" min="18" max="70">
-                    </form>
 
-                    <form class="bs-multi-range my-2 pb-2">
-                        <label for="children-min-age-range" class="form-label">Child's minimum age</label>
-                        <input id="child-age" class="multi-range" type="range" min="1" max="10">
-                    </form>
+                <form class="combined-form" method="POST" action="{% url 'swiping' %}">
+                    {% csrf_token %}
 
-                    <form class="bs-multi-range my-2 pb-2">
-                        <label for="children-max-age-range" class="form-label">Child's maximum age</label>
-                        <input id="child-age" class="multi-range" type="range" min="1" max="10">
-                    </form>
+                <!-- Parent's minimum age -->
+                <div class="bs-multi-range">
+                    <label for="parent-min-age-range" class="form-label h7-style">Parent's minimum age</label>
+                    <br>
+                    <input id="parent-min-age" name="parent-min-age" class="multi-range" type="range" min="18" max="70">
+                </div>
 
-                    <form class=" my-2 pb-2">
-                        {% for interest in interestlist %}
-                        <div class="form-inline d-flex align-items-center py-2"><label class="tick">{{interest.interest_name}}<input
-                                type="checkbox"> <span class="check"></span></label></div>
-                        {% endfor %}
-                    </form>
-                </form>
-            </div>
-            <div class="py-3">
-                <h5 class="font-weight-bold">Rating</h5>
-                <form class="rating">
-                    <div class="form-inline d-flex align-items-center py-2"><label class="tick"><span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <input type="checkbox"> <span class="check"></span> </label>
-                    </div>
-                    <div class="form-inline d-flex align-items-center py-2"><label class="tick"> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <input type="checkbox"> <span
-                            class="check"></span> </label></div>
-                    <div class="form-inline d-flex align-items-center py-2"><label class="tick"><span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <input type="checkbox"> <span
-                            class="check"></span> </label></div>
-                    <div class="form-inline d-flex align-items-center py-2"><label class="tick"><span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <input type="checkbox"> <span
-                            class="check"></span> </label></div>
-                    <div class="form-inline d-flex align-items-center py-2"><label class="tick"> <span
-                            class="fas fa-star"></span> <span class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <span
-                            class="far fa-star px-1 text-muted"></span> <input type="checkbox"> <span
-                            class="check"></span> </label></div>
-                </form>
-            </div>
+                <!-- Parent's maximum age -->
+                <div class="bs-multi-range">
+                    <label for="parent-max-age-range" class="form-label h7-style">Parent's maximum age</label>
+                    <br>
+                    <input id="parent-max-age" name="parent-max-age" class="multi-range" type="range" min="18" max="70">
+                </div>
+
+                <!-- Child's minimum age -->
+                <div class="bs-multi-range">
+                    <label for="children-min-age-range" class="form-label h7-style">Child's minimum age</label>
+                    <br>
+                    <input id="child-min-age" name="child-min-age h7-style" class="multi-range" type="range" min="1" max="10">
+                </div>
+
+                <!-- Child's maximum age -->
+                <div class="bs-multi-range">
+                    <label for="children-max-age-range" class="form-label h7-style">Child's maximum age</label>
+                    <br>
+                    <input id="child-max-age" name="child-max-age" class="multi-range" type="range" min="1" max="10">
+                </div>
+
+                <!-- Interests -->
+                    <h6 class="font-weight-bold mt-2">Popular interests</h6>
+
+                <div class="my-2 pb-2">
+                    {% for interest in interestlist|slice:':5' %}
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">{{interest.interest_name}}<input type="checkbox" name="interests[]" value="{{interest.interest_name}}"> <span class="check"></span></label>
+                        </div>
+                    {% endfor %}
+                </div>
+
+                <!-- Rating -->
+                <h6 class="font-weight-bold">Parent Rating</h6>
+                        <!-- Rating option 1 -->
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <input type="checkbox" name="rating[]" value="5">
+                                <span class="check"></span>
+                            </label>
+                        </div>
+
+                        <!-- Rating option 2 -->
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <input type="checkbox" name="rating[]" value="4">
+                                <span class="check"></span>
+                            </label>
+                        </div>
+
+                        <!-- Rating option 3 -->
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <input type="checkbox" name="rating[]" value="3">
+                                <span class="check"></span>
+                            </label>
+                        </div>
+
+                        <!-- Rating option 4 -->
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <input type="checkbox" name="rating[]" value="2">
+                                <span class="check"></span>
+                            </label>
+                        </div>
+
+                        <!-- Rating option 5 -->
+                        <div class="form-inline d-flex align-items-center py-2">
+                            <label class="tick">
+                                <span class="fas fa-star"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <span class="far fa-star px-1 text-muted"></span>
+                                <input type="checkbox" name="rating[]" value="1">
+                                <span class="check"></span>
+                            </label>
+                        </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn mt-3">Find Matches</button>
+            </form>
+
 
         </section> <!-- User Profiles Section -->
         <section id="products">
@@ -221,9 +275,6 @@
                                             <img src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
                                                  alt="" class="img-fluid rounded shadow-sm">
                                         </div>
-
-
-
 
                                     </div>
                                 </div>
