--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -54,7 +54,7 @@
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="submit" class="btn btn-primary btn-lg">Login</button>
 
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
+                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="{% url "user_registration" %}"
                                                                                           class="link-danger">Register</a>
                         </p>
                     </div>
