--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -105,7 +105,7 @@
                 <div class="bs-multi-range">
                     <label for="children-min-age-range" class="form-label h7-style">Child's minimum age</label>
                     <br>
-                    <input id="child-min-age" name="child-min-age h7-style" class="multi-range" type="range" min="1" max="10">
+                    <input id="child-min-age" name="child-min-age" class="multi-range" type="range" min="1" max="10">
                 </div>
 
                 <!-- Child's maximum age -->
