--- a/apps/chat/templates/chats/room.html
+++ b/apps/chat/templates/chats/room.html
@@ -19,7 +19,7 @@
     <div class="chat-message-container" id="chat-message-container">
       {% for chat_message in chat_messages %}
       <div
-        class="chatMessage{% if chat_message.sender == user %} chatMessage--right{% else %} chatMessage--left{% endif %}">
+        class="chatMessage{% if chat_message.sender == user %} chatMessage--right{% elif chat_message.sender == other_user %} chatMessage--left{% else %} chatMessage--system {% endif %}">
         {{ chat_message.content|safe }}
       </div>
       {% endfor %}
